DELETE API GET: /item, /item/:id. UPDATE API GET: /session, /session/:id
